force-app/main/default/objects/JunctCustFinAcct__c/JunctCustFinAcct__c.object-meta.xml
<CustomObject>
    <label>JunctCustFinAcct</label>
    <nameField>
        <displayFormat>JCUFA-{000000000}</displayFormat>
        <label>JunctionCustFInAcct</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JunctCustFinAcct</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>