force-app/main/default/objects/JunctCustFinAcct__c/fields/Cust_Fin_Combo_Key__c.field-meta.xml
<CustomField>
    <fullName>Cust_Fin_Combo_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Cust Fin Combo Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>