force-app/main/default/objects/JunctCustFinAcct__c/fields/Financial_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Name__c</fullName>
    <label>Financial Account Name</label>
    <referenceTo>Financial_Accounts__c</referenceTo>
    <relationshipLabel>Related Customers</relationshipLabel>
    <relationshipName>JunctCustFinAcct</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>