force-app/main/default/objects/JunctCustFinAcct__c/fields/Relationship_Cd_Description__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Cd_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship Cd Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>